feat: implement customer management features with domain services, repositories, and REST API endpoints